Add Java 21 as a JDK to starter